--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uniben-post-ume-quiz",
+  "name": "jupeb-entrance-exam-prep-quiz",
   "private": true,
   "version": "0.0.0",
   "type": "module",
